<resources>
    <string name="app_name">DepEat</string>
    <string name="email_hint">Insert email</string>
    <string name="password_hint">Insert your password</string>
    <string name="password_hint2">Confirm password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="credential_ok">credenziali ok</string>
    <string name="welcome">Welcome</string>
    <string name="email_tv">ciao</string>
    <string name="send_mail">Send email</string>
    <string name="num_telefono">Insert phone</string>
    <string name="checkout">CheckOut</string>
    <string name="pay">Pay</string>
    <string name="be_careful">Stai attento</string>
    <string name="remove_title">Sei sicuro?</string>
    <string name="confirm">Conferma</string>
    <string name="cancel">Cancella</string>
    <string name="username">Insert Username</string>
    <string name="eseguito">Eseguito</string>
    <string name="profile">Profile</string>
</resources>
